# src/Entity/Dto/CreateCategoryDto.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Entity\Dto;
+
+class CreateCategoryDto
+{
+    private string $name;
+
+    public function __construct(string $name)
+    {
+        $this->name = $name;
+    }
+
+    public function getName(): string
+    {
+        return $this->name;
+    }
+}
